# eda-rust

./: .gitignore  README.md  docker-compose.yml
astronauts-msvc/: Cargo.toml  Dockerfile
astronauts-msvc/src/: main.rs
astronauts-msvc/src/domain/: astronaut_commander.rs  astronaut_controller.rs  astronaut_model.rs  astronaut_querier.rs  astronaut_synchronizer.rs  mod.rs  model.rs  token_model.rs
astronauts-msvc/src/http/: into_responses.rs  mod.rs
astronauts-msvc/src/providers/: emitter.rs  hash.rs  listener.rs  mem_state.rs  mod.rs  random.rs  state.rs  token.rs
astronauts-msvc/src/schema/: mod.rs  mutation.rs  query.rs  subscription.rs
auth-msvc/: Cargo.toml  Dockerfile
auth-msvc/src/: main.rs
auth-msvc/src/domain/: astronaut_model.rs  mod.rs  token_commander.rs  token_model.rs  token_synchronizer.rs
auth-msvc/src/http/: extractors.rs  into_responses.rs  mod.rs
auth-msvc/src/providers/: hash.rs  listener.rs  mod.rs  random.rs  token.rs
auth-msvc/src/schema/: mod.rs  mutation.rs  query.rs
e2e_tests/: Cargo.toml
e2e_tests/docs/: Analysis astronaut should authenticate after creation.md
e2e_tests/src/: lib.rs  test_astronauts.rs  test_missions.rs  test_time_elapsed.rs
gateway/: astronauts.graphql  auth.graphql  missions.graphql  router.yml  supergraph.graphql  supergraph.yml
kubernetes/: README.md  dev.sh  kind.sh
kubernetes/base/: echo.yaml  kustomization.yaml  namespaces.yaml  nginx-deployment.yaml
kubernetes/base/kafka/: ingress.yaml  kafka-config.yaml  kafka-sts.yaml  kafka-ui.yaml  kustomization.yaml
kubernetes/base/monitoring/: grafana.yaml  ingress.yaml  kustomization.yaml  loki.yaml  prometheus_stack.yaml  promtail.yaml
kubernetes/base/my-app/: astronauts-msvc-deployment.yaml  auth-msvc-deployment.yaml  ingress.yaml  jwt-keys.yaml  kustomization.yaml  missions-msvc-deployment.yaml
kubernetes/dev/: kind-ingress-controller.yaml  kustomization.yaml
kubernetes/dev/patches/kafka/: ingress.yaml
kubernetes/dev/patches/monitoring/: ingress.yaml
kubernetes/dev/patches/my-app/: astronauts-msvc-deployment.yaml  auth-msvc-deployment.yaml  ingress.yaml  missions-msvc-deployment.yaml
kubernetes/dev/secrets/: .gitignore  README.md  kustomization.yaml
missions-msvc/: Cargo.toml  Dockerfile
missions-msvc/src/: main.rs
missions-msvc/src/domain/: mission_commander.rs  mission_model.rs  mission_querier.rs  mission_synchronizer.rs  mod.rs  token_model.rs
missions-msvc/src/http/: extractors.rs  into_responses.rs  mod.rs
missions-msvc/src/providers/: json.rs  listener.rs  mod.rs  state.rs  token.rs
missions-msvc/src/schema/: mod.rs  mutation.rs  query.rs  subscription.rs
sse_test/: Cargo.toml
sse_test/src/: main.rs
