[package]
name = "astronauts-msvc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-graphql = { version = "5.0.6", features = ["chrono", "uuid"] }
async-graphql-axum = "5.0.6"
async-stream = "0.3.4"
axum = { version = "0.6.4", features = ["headers"] }
chrono = { version = "0.4.23", features = ["serde"] }
mongodb = "2.3.1"
rdkafka = "0.29.0"
serde = "1.0.152"
serde_json = "1.0.93"
thiserror = "1.0.38"
tokio = { version = "1.25.0", features = ["macros", "rt-multi-thread"] }
tokio-stream = "0.1.12"
uuid = { version = "1.3.0", features = ["v4", "fast-rng"] }
