[package]
name = "astronauts-msvc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argon2 = "0.5.0"
axum = { version = "0.6.18", features = ["headers", "macros"] }
chrono = { version = "0.4.23", features = ["serde"] }
futures-util = "0.3.28"
jwt-simple = "0.11.4"
log = "0.4.17"
mongodb = "2.4.0"
pretty_env_logger = "0.4.0"
rand = "0.8.5"
rdkafka = "0.29.0"
redis = { version = "0.22.3", features = ["aio", "tokio-comp"] }
serde = "1.0.152"
serde_json = "1.0.93"
thiserror = "1.0.38"
tokio = { version = "1.25.0", features = ["macros", "rt-multi-thread"] }
tokio-stream = { version = "0.1.12", features = ["sync"] }
uuid = { version = "1.3.0", features = ["v4", "fast-rng"] }
